<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:paddingTop="20dip"
    android:background="@android:color/white"
    >
    <TextView
        android:id="@+id/webview_layout_tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:paddingRight="15dip"
        android:paddingLeft="15dip"
        android:drawablePadding="5dip"
        android:background="@drawable/common_white_item_click_selector"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:layout_alignBottom="@+id/webview_layout_et_url"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/ic_ab_back_holo_light_am"
        />

    <TextView
        android:id="@+id/webview_layout_tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/webview_layout_et_url"
        android:layout_alignParentRight="true"
        android:background="@drawable/common_white_item_click_selector"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        />
    <EditText
        android:id="@+id/webview_layout_et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:textColor="@color/common_light_text_color"
        android:background="@drawable/webview_header_bg"
        android:layout_marginRight="15dip"
        android:ellipsize="end"
        android:layout_toLeftOf="@+id/webview_layout_tv_confirm"
        android:layout_toRightOf="@+id/webview_layout_tv_back"
        android:text="@string/update_default_url"
        />
    <TextView
        android:id="@+id/webview_layout_progressbar_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/webview_layout_et_url"
        android:text="@string/requesting"
        />
    <ProgressBar
        android:id="@+id/webview_layout_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleInverse"
        android:layout_marginTop="5dip"
        android:layout_below="@+id/webview_layout_progressbar_hint"

        android:indeterminate="false" />

    <RelativeLayout
        android:id="@+id/webview_layout_ll_show_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dip"
        android:layout_below="@+id/webview_layout_et_url"
        android:visibility="gone"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/webview_layout_tv_laster_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_light_text_color"
            android:text="@string/laster_version"
            />
        <TextView
            android:id="@+id/webview_layout_tv_laster_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/webview_layout_tv_laster_version_title"
            android:text="V1.0.1"
            />
        <TextView
            android:id="@+id/webview_layout_tv_update_content_title"
            android:layout_width="wrap_content"
            android:layout_below="@+id/webview_layout_tv_laster_version"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="40dip"
            android:textColor="@color/common_hint_text_color"
            android:text="@string/update_content"
            />
        <TextView
            android:id="@+id/webview_layout_tv_update_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_data"
            android:hint="@string/no_data"
            android:textColorHint="@color/common_light_text_color"
            android:textColor="@color/common_light_text_color"
            android:layout_below="@+id/webview_layout_tv_update_content_title"
            />
        <TextView
            android:id="@+id/webview_layout_tv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn_selector"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:clickable="true"
            android:onClick="onClick"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/download_update"
            />
        <TextView
            android:id="@+id/webview_layout_tv_update_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:visibility="gone"
            android:layout_below="@+id/webview_layout_tv_update"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:textColor="#ff8a07"
            android:layout_gravity="center_horizontal"
            android:text="0B"
            />

        <TextView
            android:id="@+id/webview_layout_tv_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_version"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/common_light_text_color"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/webview_layout_tv_unintall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:onClick="onClick"
        android:padding="10dip"
        />
</RelativeLayout>